--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #===================================================
 # DATA SOURCE CONFIGURATION
 #===================================================
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=dinopedia
-spring.datasource.username=postgres
-spring.datasource.password=postgre$4
+spring.datasource.url=jdbc:postgresql://postgresql:5432/postgres
+spring.datasource.username=admin
+spring.datasource.password=admin
 
 server.port=8080
 
