added unit & integration tests | added configuration for docker or localhost in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,18 @@
 #===================================================
 # DATA SOURCE CONFIGURATION
 #===================================================
-spring.datasource.url=jdbc:postgresql://postgresql:5432/postgres
-spring.datasource.username=admin
-spring.datasource.password=admin
+
+#docker
+#===================================================
+#spring.datasource.url=jdbc:postgresql://postgresql:5432/postgres
+#spring.datasource.username=admin
+#spring.datasource.password=admin
+
+#localhost
+#===================================================
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=dinopedia
+spring.datasource.username=postgres
+spring.datasource.password=postgre$4
 
 server.port=8080
 
