--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,14 +11,14 @@
 #localhost
 #===================================================
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=dinopedia
-spring.datasource.username=postgres
-spring.datasource.password=postgre$4
+spring.datasource.username=admin
+spring.datasource.password=admin
 
 server.port=8080
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 #=======================================================
 # JPA / HIBERNATE / SQL logging
